yaml_deployments/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: sqldb
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-deployment
        image: 481454206029.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2-ecr:mysql-20240301154410
        ports:
        - containerPort: 3306
      imagePullSecrets:
      - name: my-aws-ecr-cred
