yaml_deployments/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: sqldb
  labels:
    name: mysql-pod
spec:
  containers:
  - name: mysql-pod
    image: 481454206029.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2-ecr:mysql-20240301154410
    ports:
    - containerPort: 3306
  imagePullSecrets:
    - name: my-aws-ecr-cred
