yaml_deployments/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webapp
  labels:
    app: employees
    version: v1
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: employees
      version: v1
  template:
    metadata:
      labels:
        app: employees
        version: v1
    spec:
      containers:
      - name: webapp-container
        image: 481454206029.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2-ecr:WebAPP-20240302001806
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: my-aws-ecr-cred
