yaml_deployments/webapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  namespace: webapp
  labels:
    app: webapp
spec:
  containers:
  - name: webapp-container
    image: 481454206029.dkr.ecr.us-east-1.amazonaws.com/clo835-assignment2-ecr:WebAPP-20240301154443
    ports:
    - containerPort: 8080
  imagePullSecrets:
    - name: my-aws-ecr-cred
