yaml_deployments/mysql-pod-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-pod-service
spec:
  selector:
    pod_name: mysql-pod
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
