yaml_deployments/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp
spec:
  type: NodePort
  selector:
    app: employees
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
      protocol: TCP
