yaml_deployments/webapp2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
  namespace: webapp
spec:
  type: NodePort
  selector:
    app: employees
    version: v2
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
      protocol: TCP
