yaml_deployments/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: webapp-service
            port:
              number: 8080
      - pathType: Prefix
        path: /v2
        backend:
          service:
            name: web2app-service
            port:
              number: 8080
